# VisionLead

./: .gitignore  README.md
integration_test/: README.md  requirements.txt
integration_test/tests/: auto_test.py  conftest.py  manual_test.py
zephyrproject/: INSTALL_INSTRUCTIONS.md  RECOMENDED_VIDEOS.md
zephyrproject/script/: bleak_client.py  bleak_connect.py  bleak_scan.py  test.py
zephyrproject/src/: CMakeLists.txt  arduino_nano_33_ble.overlay  prj.conf
zephyrproject/src/ble/: ble.c  ble.h
zephyrproject/src/gpio/: gpio.c  gpio.h
zephyrproject/src/src/: main.c
